test two finger pan

--- a/new/index_multi.html
+++ b/new/index_multi.html
@@ -55,7 +55,7 @@ Anregungen zur Nutzung oder beispielhafte Weiterentwicklungen nehmen wir gerne u
 		// interaktivität der Karte kann mit Optionen gesteuert werden
 		zoomControl: true,
 		dragging: true,
-		attributionControl: true  //,closePopupOnClick: false
+		attributionControl: true,  dragging: !L.Browser.mobile  //,closePopupOnClick: false
 	});
 
 	// OSM-Hintergrundslayer definieren
