test two finger pan

--- a/new/index_multi.html
+++ b/new/index_multi.html
@@ -36,7 +36,7 @@ Anregungen zur Nutzung oder beispielhafte Weiterentwicklungen nehmen wir gerne u
 	Die Funktionen wurden angepasst, um JSONP-Anfragen durchzuführen und ausgewählte Elemente der Feature-Info im Popup darzustellen; Änderungen sind in leaflet-betterwms.js entsprechen markiert
 	-->
 	<script src="src/leaflet-betterwms_djm.js"></script>
-
+	<script type="application/ld+json"></script>  <!-- structured data -->
 </head>
 <body>
 
