parameter ?7 don't use proxy

--- a/new/index_lkr.html
+++ b/new/index_lkr.html
@@ -130,7 +130,7 @@ Anregungen zur Nutzung oder beispielhafte Weiterentwicklungen nehmen wir gerne u
 
 	var overLayers = {
 			"<span title='DWD Geoserver dwd:Warnungen_Gemeinden_vereinigt'>Warnungen einblenden</span>": warnlayer.addTo(karte),  //Gemeinde vereinigt
-			"<span title='DWD Geoserver Gemeindewarngebiete'Landkreisgrenzen</span>": gemeindelayer,  //Warngebiete (Gemeinden)  //Landkreis
+			"<span title='DWD Geoserver Gemeindewarngebiete'>Landkreisgrenzen</span>": gemeindelayer,  //Warngebiete (Gemeinden)  //Landkreis
 			"<span title='Satellitenbild METEOSAT'>Satellitenbild</span>": satlayer,
 			"<span title='Warnungen_Binnenseen und Küste'>Warnungen Binnenseen</span>": seenlayer
 			, "<span title='Pollenflug Graeser'>Gräser</span>": graeserlayer  //,
