--- a/new/config.html
+++ b/new/config.html
@@ -38,7 +38,7 @@ ort
 
 <br>
 <label for="level">warnlevel &#x2265; </label>
-<input type="range" min="1" max="5" step="1" value="1" id="level" onchange='this.title=this.value; para(this.value.replace("1",""));document.getElementById("ort").value=""' list="tickmarks">
+<input type="range" min="1" max="5" step="1" value="1" id="level" title="1" onchange='this.title=this.value; para(this.value.replace("1",""));document.getElementById("ort").value=""' list="tickmarks">
 <datalist id="tickmarks">
   <option value="1">
   <option value="2">
