--- a/new/config.html
+++ b/new/config.html
@@ -5,9 +5,7 @@
 <style>
 img {width: 24px}
 img:focus {border: 1px solid blue}
-:root {--main-bg-color:linear-gradient(to right, yellow,orange,red,darkred)}
-input[type=range]::-webkit-slider-runnable-track {background:var(--main-bg-color)}
-input[type=range]::-moz-range-track {background:var(--main-bg-color)}
+input[type=range]::-webkit-slider-runnable-track {background:linear-gradient(to right, yellow,orange,red,darkred)}
 </style>
 </head>
 Select one option<br><br>
