configurator for DWD Warnmodul

--- a/new/config.html
+++ b/new/config.html
@@ -5,7 +5,7 @@
 <style>
 img {width: 24px}
 img:focus {border: 1px solid blue}
-input[type=range]::-webkit-slider-runnable-track {background:linear-gradient(to right, yellow,orange,red,darkred)}
+input[type=range]::-webkit-slider-runnable-track {background:linear-gradient(to right, yellow,yellow 25%,orange 25%,orange 50%,red 50%,red 75%,darkred 75%)}
 </style>
 </head>
 Select one option<br><br>
