configurator for DWD Warnmodul

--- a/new/config.html
+++ b/new/config.html
@@ -3,6 +3,7 @@
 <head>
 <base href="https://dj0001.github.io/DWD-Warnmodul-2/">
 <style>
+body {font-family:Helvetica }
 img {width: 24px}
 img:focus {border: 1px solid blue}
 input[type=range]::-webkit-slider-runnable-track {background:linear-gradient(to right, yellow,yellow 25%,orange 25%,orange 50%,red 50%,red 75%,darkred 75%)}
@@ -11,7 +12,7 @@ label {display: inline-block; width: 76px}
 </head>
 Select one option<br><br>
 
-<label for="group">group </label>
+<label for="group">gruppe</label>
 <span id="group">
 <img src="https://www.dwd.de/DWD/warnungen/warnapp_gemeinden/viewer/img/warnicons/warn_icons_alle.png" alt="alle" width=24 title="" tabindex="0">
 <img src="icons/THUNDERSTORM.png" title="Gewitter" tabindex="0">
@@ -36,7 +37,7 @@ Select one option<br><br>
 </datalist>
 
 <br>
-<label for="level">warnlevel &#x2265;</label>
+<label for="level">stufe &#x2265;</label>
 <input type="range" min="1" max="5" step="1" value="1" id="level" title="1" onchange='this.title=this.value; para(this.value.replace("1",""));document.getElementById("ort").value=""' list="tickmarks">
 <datalist id="tickmarks">
   <option value="1">
@@ -47,7 +48,7 @@ Select one option<br><br>
 </datalist>
 <br><br>
 
-<a href="index.html" target="wm">Warnmodul</a>
+<a href="index.html" target="wm">Warnmodul</a> with parameter
 
 
 <script>
