configurator for DWD Warnmodul

--- a/new/config.html
+++ b/new/config.html
@@ -1,6 +1,9 @@
 <!DOCTYPE html>
+<html lang="de">
 
 <head>
+<title>configurator for DWD- Warnmodul 2</title>
+<meta name="viewport" content="width=device-width, initial-scale=1">
 <base href="https://dj0001.github.io/DWD-Warnmodul-2/">
 <style>
 body {font-family:Helvetica }
@@ -10,6 +13,7 @@ input[type=range]::-webkit-slider-runnable-track {background:linear-gradient(to 
 label {display: inline-block; width: 76px}
 </style>
 </head>
+
 Select one option<br><br>
 
 <label for="group">gruppe</label>
