--- a/new/config.html
+++ b/new/config.html
@@ -10,13 +10,12 @@ body {font-family:Helvetica }
 input[type=image] {width: 24px}
 input[type=image]:focus {border: 1px solid blue} /* IE */
 input[type=range]::-webkit-slider-runnable-track {background:linear-gradient(to right, yellow,yellow 25%,orange 25%,orange 50%,red 50%,red 75%,darkred 75%)}
-label {display: inline-block; width: 76px}
+.onoffswitch {display: inline-block; position: relative; width: 28px; -moz-user-select:none;} #myonoffswitch {display: none;} .onoffswitch-label {display: block; overflow: hidden; cursor: pointer; height: 8px; padding: 0; line-height: 8px; border: 0px solid #FFFFFF; border-radius: 16px; background-color: #9E9E9E;} .onoffswitch-label:before {content: ""; display: block; width: 16px; margin: -4px; background: #FFFFFF; position: absolute; top: 0; bottom: 0; right: 16px; border-radius: 16px; box-shadow: 0 6px 12px 0px #757575;} #myonoffswitch:checked + .onoffswitch-label {background-color: #CCCCCC; margin-left: 0;} #myonoffswitch:checked + .onoffswitch-label, #myonoffswitch:checked + .onoffswitch-label:before {border-color: #CCCCCC;} #myonoffswitch:checked + .onoffswitch-label:before {right: 0px; background-color: #9E9E9E; box-shadow: 3px 6px 18px 0px rgba(0, 0, 0, 0.2);} 
 </style>
 </head>
 
 Select one option<br><br>
 
-<label for="group">gruppe</label>
 <span id="group">
 <input type="image" src="https://www.dwd.de/DWD/warnungen/warnapp_gemeinden/viewer/img/warnicons/warn_icons_alle.png" alt="alle" title="">
 <input type="image"  src="icons/THUNDERSTORM.png" title="Gewitter">
@@ -32,8 +31,7 @@ Select one option<br><br>
 </span>
 
 <br>
-<label for="ort">ort </label>
-<input type="text" list="cityname" title="default: locate" onchange='para((isNaN(this.value)?"ort=":"")+this.value);document.getElementById("level").value="1"' id="ort">  <!-- oninput -->
+<input type="text" placeholder="Ort" list="cityname" title="default: locate" onchange='para((isNaN(this.value)?"ort=":"")+this.value);document.getElementById("level").value="1"' id="ort">  <!-- oninput -->
 <datalist id="cityname">
   <option value="">locate</option>
   <option value="0">none</option>
@@ -41,8 +39,8 @@ Select one option<br><br>
 </datalist>
 
 <br>
-<label for="level">stufe &#x2265;</label>
-<input type="range" min="1" max="5" step="1" value="1" id="level" title="1" onchange='this.title=this.value; para(this.value.replace("1",""));document.getElementById("ort").value=""' list="tickmarks">
+<small>Warnlevel</small><br>
+<input type="range" min="1" max="5" step="1" value="1" id="level" title="&#x2265;1" onchange='this.title=this.value; para(this.value.replace("1",""));document.getElementById("ort").value=""' list="tickmarks">
 <datalist id="tickmarks">
   <option value="1">
   <option value="2">
@@ -52,11 +50,16 @@ Select one option<br><br>
 </datalist>
 <br><br>
 
-<a href="index.html" target="wm">Warnmodul</a> with parameter
+Landkreise <div class="onoffswitch"><input id="myonoffswitch" type="checkbox" onchange='opt.lkr=this.checked?1:"";para()'><label class="onoffswitch-label" for="myonoffswitch"></label></div>
+<br>
+<br>
+
+<a href="index.html" target="wm" title="with parameter">Warnmodul</a>
 
 
 <script>
-function para(query) {document.querySelector("a").href="?"+query}  //index.html
+var qs="",opt={}
+function para(query) {if(typeof query!='undefined') qs=query; document.querySelector("a").href="?"+qs+("&"+Object.keys(opt).map(function(key) {return key+'='+opt[key]}).join('&'))}
 var tmp=document.querySelectorAll('input[type=image]'); for (var i=0; i<tmp.length; i++) {
  tmp[i].onclick = function(e) {para(e.target.title);document.getElementById("ort").value="";document.getElementById("level").value="1"}
  }
