configurator for DWD Warnmodul
form

--- a/new/config.html
+++ b/new/config.html
@@ -55,8 +55,9 @@ Select one option<br><br>
 <input type="hidden" name="qs">
   Landkreise 
   <div class="onoffswitch"><input type="checkbox" name="lkr" id="myonoffswitch"><label class="onoffswitch-label" for="myonoffswitch"></label></div>
-<br>
-<br>
+  <br><br>
+<input type="submit" value="Submit">
+</form>
 
 <script>
 var qst=""
