--- a/new/config.html
+++ b/new/config.html
@@ -15,7 +15,7 @@ input[type=range]::-webkit-slider-runnable-track {background:linear-gradient(to 
 </style>
 </head>
 
-Select one option<br><br>
+Wähle eine Option<br><br>
 
 <span id="group">
 <input type="image" src="https://www.dwd.de/DWD/warnungen/warnapp_gemeinden/viewer/img/warnicons/warn_icons_alle.png" alt="alle" title="">
@@ -56,7 +56,7 @@ Select one option<br><br>
   Landkreise 
   <div class="onoffswitch"><input type="checkbox" name="lkr" id="myonoffswitch"><label class="onoffswitch-label" for="myonoffswitch"></label></div>
   <br><br>
-<input type="submit" value="Submit">
+<input type="submit" value="Fertig">
 </form>
 
 <script>
