configurator for DWD Warnmodul

--- a/new/config.html
+++ b/new/config.html
@@ -17,7 +17,7 @@ span[onclick] {cursor:pointer}
 </style>
 </head>
 
-eine Option wählen<br><br>
+eine Option wählen<hr><br>
 
 <span id="group">
 <input type="image" src="https://www.dwd.de/DWD/warnungen/warnapp_gemeinden/viewer/img/warnicons/warn_icons_alle.png" alt="alle" title="">
