--- a/new/index_womap.html
+++ b/new/index_womap.html
@@ -22,7 +22,7 @@ console.log(lat+","+lon)
 var url = "https://maps.dwd.de/geoserver/dwd/wms/?request=GetFeatureInfo&service=WMS&srs=EPSG%3A4326&styles=&transparent=true&version=1.1.1&format=image%2Fpng&bbox="+lon+"%2C"+lat+"%2C"+(1*lon+0.001)+"%2C"+(1*lat+0.001)+"&height=1&width=1&layers=Warnungen_Gemeinden_vereinigt&query_layers=Warnungen_Gemeinden_vereinigt&info_format=application%2Fjson&propertyName=EVENT%2CONSET%2CEXPIRES%2CSENT%2CSEVERITY%2CEC_GROUP%2CSENT&FEATURE_COUNT=50&x=0&y=0"
     var xhr = new XMLHttpRequest()
     xhr.open("GET", url, true)
-    xhr.onload = function() {var data=JSON.parse(this.response); showGetFeatureInfo(data) }
+    xhr.onload = function() {var data=JSON.parse(this.response); showGetFeatureInfo(data); setTimeout(function(){getFeatureInfo(ort)}, 300000) }
     xhr.send()
 }
 
