--- a/new/index_womap.html
+++ b/new/index_womap.html
@@ -14,10 +14,10 @@
 
 <script>
 if(location.search) getFeatureInfo(decodeURI(location.search.slice(1)).split(","));  //URL parameter ?48.37,10.9
-else navigator.geolocation.getCurrentPosition(function(e){getFeatureInfo([e.coords.latitude,e.coords.longitude])},function(e){getFeatureInfo([48.4,10.9])});  //edit here ort
+else navigator.geolocation.getCurrentPosition(function(e){getFeatureInfo([e.coords.latitude,e.coords.longitude])},function(e){getFeatureInfo(0)});
 
 function getFeatureInfo(ort) {
-var lat=1*ort[0]||48.4, lon=1*ort[1]||10.9
+var lat=1*ort[0]||48.4, lon=1*ort[1]||10.9  //edit here
 console.log(lat+","+lon)
 var url = "https://maps.dwd.de/geoserver/dwd/wms/?request=GetFeatureInfo&service=WMS&srs=EPSG%3A4326&styles=&transparent=true&version=1.1.1&format=image%2Fpng&bbox="+lon+"%2C"+lat+"%2C"+(1*lon+0.001)+"%2C"+(1*lat+0.001)+"&height=1&width=1&layers=Warnungen_Gemeinden_vereinigt&query_layers=Warnungen_Gemeinden_vereinigt&info_format=application%2Fjson&propertyName=EVENT%2CONSET%2CEXPIRES%2CSENT%2CSEVERITY%2CEC_GROUP%2CSENT&FEATURE_COUNT=50&x=0&y=0"
     var xhr = new XMLHttpRequest()
