--- a/new/index_withoutmapUSA.html
+++ b/new/index_withoutmapUSA.html
@@ -13,8 +13,9 @@
 <div id="anzeige"></div>
 
 <script>
-if(location.search) getFeatureInfo(decodeURI(location.search.slice(1)).split(","));  //URL parameter ?48.37,10.9
-else navigator.geolocation.getCurrentPosition(function(e){getFeatureInfo([e.coords.latitude,e.coords.longitude])},function(e){getFeatureInfo(0)});
+var area=location.search.slice(1)||prompt("enter area (0 = \u2316)","48.4,10.9")||0  //URL parameter ?48.37,10.9 (small view)
+if(area==0) navigator.geolocation.getCurrentPosition(function(e){getFeatureInfo([e.coords.latitude,e.coords.longitude])},function(e){getFeatureInfo(0)});
+else getFeatureInfo(area.split(","))
 
 function getFeatureInfo(ort) {
 var lat=1*ort[0]||48.4, lon=1*ort[1]||10.9  //edit here
@@ -36,7 +37,8 @@ content += "<p>"+(item.EVENT||item.event)
 + "</p>"
 })
 
-document.querySelector("#anzeige").innerHTML="<h2>Official warning</h2>"+(content||"no warnings")+" <a href='https://www.dwd.de/warnungen'>dwd.de</a>" +" <a href='https://www.weather.gov'>NWS</a>"
+if(location.search && content) content="weather alert"  //small view
+document.querySelector("#anzeige").innerHTML=(location.search?'':"<h2>Official warning</h2>")+(content||"no warnings")+" <a href='https://www.dwd.de/warnungen'>dwd.de</a>" +" <a href='https://www.weather.gov'>NWS</a>"
 //fetch('http://localhost:8000/api/newdeveloper/groups/0/action',{method:"PUT",body:content?'{"hue":10920}':'{"hue":21840}',headers:{'Content-Type':'application/json'}})  //philipshue
 }
 </script>
